Update VOCUS 2023-02-04 patch

--- a/_posts/2022-12-05-VOCUS-廣告阻擋域名解析伺服器.html
+++ b/_posts/2022-12-05-VOCUS-廣告阻擋域名解析伺服器.html
@@ -14,7 +14,7 @@ author: 陳易宏
 <div><h3><a href="https://mx.ihctw.bid/notiktokdns.mobileconfig">頁面本身資訊不完整，請洽網站提供者或改用超連結功能" data-providername="Ihctw"></div>
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">https://mx.ihctw.bid/notiktokdns.mobileconfig</pre></pre>
 <h3 class="draft-block draft--h3" name="header-ce052">安裝程序如下</h3>
-<div><h3><a href="https://support.apple.com/zh-tw/guide/iphone/iph6c493b19/ios">在 iPhone 上安裝或移除設定描述檔</a></h3><span>設定描述檔會定義搭配公司或學校網路或帳號使用 iPhone 時的設定。你可能需要安裝透過電子郵件傳送給你，或是你從網頁上下載的設定描述檔。你可能需要允許安裝描述檔，當你打開檔案時，會顯示其中所包含內容的資訊。你可以在「設定」 >「一般」>「VPN 與裝置管理」中查看你已安裝的描述檔。若你刪除描述檔，與該描述檔相關聯的所有設定、App 和資料都會隨之刪除。" data-providername="Apple Support"></div>
+<div><h3><a href="https://support.apple.com/zh-tw/guide/iphone/iph6c493b19/ios">在 iPhone 上安裝或移除設定描述檔</a></h3><span>設定描述檔會定義搭配公司或學校網路或帳號使用 iPhone 時的設定。你可能需要安裝透過電子郵件傳送給你，或是你從網頁上下載的設定描述檔。你可能需要允許安裝描述檔，當你打開檔案時，會顯示其中所包含內容的資訊。你可以在「設定」 >「一般」>「VPN 與裝置管理」中查看你已安裝的描述檔。若你刪除描述檔，與該描述檔相關聯的所有設定、App 和資料都會隨之刪除。" </span></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-4a5ab">使用 Android 手機的人</h2>
 <div class="draft-block draft--p left">使用安卓裝置的朋友，請把下面這個伺服器名稱填入手機的<span style="font-weight: bold; ">「私人DNS供應商主機名稱」</span>中。</div>
@@ -36,7 +36,7 @@ author: 陳易宏
 <div class="draft-block draft--p left">請連上這個網站</div>
 <div><h3><a href="https://adguard.com/en/test.html">AdGuard - World's most advanced adblocker!</a></h3><span>IP: 2600:1f18:100d:9f31:8adc:73c8:94bb:5195, US AdGuard is the best way to get rid of intrusive ads and online tracking, and to protect your computer from malware. Read more AdGuard is the best way to get rid of intrusive ads and online tracking, and to protect your computer from malware.</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fadguard.com%2Fimg%2Fsocial%2Fog-main.png&amp;width=550&amp;sign=JVFsKW108170PtmR5pLt98YJPZna1OulnRHWxMO0KiA"></div>
 <div class="draft-block draft--p left">如果最下面這個 AdGuard DNS 旁邊有綠勾勾，就是有成功連線</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:670px" class="image-block-prerender" data-src="https://images.vocus.cc/aaa48c03-558d-4dee-a4f4-69778561959e.png" data-width="670" data-height="335" data-position="center" src="https://images.vocus.cc/aaa48c03-558d-4dee-a4f4-69778561959e.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/aaa48c03-558d-4dee-a4f4-69778561959e.png" data-width="670" data-height="335" data-position="center" src="https://images.vocus.cc/aaa48c03-558d-4dee-a4f4-69778561959e.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-728un">備援伺服器</h2>
 <div class="draft-block draft--p left">備援伺服器只有 DNS-over-HTTPS 的選項：</div>
@@ -48,13 +48,7 @@ author: 陳易宏
 <pre class="public-DraftStyleDefault-pre draft-block"><pre class="draft--code-block">https://mx.ihctw.bid/notiktokdnsb.mobileconfig</pre></pre>
 <div class="draft-block draft--p left">Android 請下載 Intra  然後在設定處填入：</div>
 <div class="draft-block draft--p left">https://ihctw.synology.me/dns-query</div>
-<div><h3><a href="https://getintra.org/">A safer route to a more open internet</a></h3><span>Intra encrypts your internet connection to a public Domain Name System (DNS) server. DNS servers work like a contact list - when you use the internet, your DNS server provides the exact addresses you need to visit a website or open an app." data-providername="Getintra"></div>
-<div class="draft-block draft--p left"></div>
+<div><h3><a href="https://getintra.org/">A safer route to a more open internet</a></h3><span>Intra encrypts your internet connection to a public Domain Name System (DNS) server. DNS servers work like a contact list - when you use the internet, your DNS server provides the exact addresses you need to visit a website or open an app."</span></div>
 <div class="draft-block draft--p left">設定完成之後請連抖音看看</div>
 <div><h3><a href="https://www.tiktok.com/">TikTok - Make Your Day</a></h3><span>TikTok - trends start here. On a device or on the web, viewers can watch and discover millions of personalized short videos. Download the app to get started.</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fp16-sign-va.tiktokcdn.com%2Ftos-maliva-p-0068%2Feaf769416a6f4a95b3b6f5eddacb613e_1669835340~tplv-dmt-logom%3Atos-useast2a-v-0068%2F83ddf0bf07ab4dc4969b469da71dd6fd.image%3Fx-expires%3D1670824800%26x-signature%3DuhouxFqNgoHfVClPz3QRf%252Fh9%252FCY%253D&amp;width=550&amp;sign=F87-B_rWzJbg9jnaSS5lYyTcFUPBH0gjQ4rjR5_K2jE"></div>
 <div class="draft-block draft--p left">如果抖音連不上就是設定成功</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
