--- a/_posts/2022-12-31-VOCUS-文化商業-business-of-fashion-&-麥肯錫-2023-全球時尚與精品商業報告摘要.html
+++ b/_posts/2022-12-31-VOCUS-文化商業-business-of-fashion-&-麥肯錫-2023-全球時尚與精品商業報告摘要.html
@@ -8,15 +8,13 @@ tags: blog
 author: 無鴉片評論
 ---
 
-<div class="draft--imgFull"><div><img style="height:1790px" class="image-block-prerender" data-src="https://images.vocus.cc/bc325603-d947-43cc-a45e-9565ae5635d0.png" data-width="1790" data-height="1192" data-position="full" src="https://images.vocus.cc/bc325603-d947-43cc-a45e-9565ae5635d0.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business of Fashion 2023 Report: The State of fashion</figcaption></div></div>
+<div class="draft--imgFull"><div><img data-src="https://images.vocus.cc/bc325603-d947-43cc-a45e-9565ae5635d0.png" data-width="1790" data-height="1192" data-position="full" src="https://images.vocus.cc/bc325603-d947-43cc-a45e-9565ae5635d0.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business of Fashion 2023 Report: The State of fashion</figcaption></div></div>
 <div class="draft-block draft--p left"><a href="https://www.businessoffashion.com/" target="_blank" class="draft--a">Business of Fashion</a> 是世界上時尚與精品首屈一指的商業媒體：創辦人 <a href="https://www.linkedin.com/in/imranamed/" target="_blank" class="draft--a">Imran AMED</a> 出身傳統策略顧問龍頭<a href="https://www.mckinsey.com/" target="_blank" class="draft--a">麥肯錫 McKinsey</a>，在十年前帶著對時尚、精品、織品、零售的信心與熱情，離職創辦。至今 BOF 是我看過最具有洞見的商業媒體，舉凡局勢分析、個案拆解，執筆鏗鏘有力。除了先前提過的貝恩顧問報告，若對此產業有興趣，我強烈建議將 BOF 列為新知來源。</div>
 <div class="draft-block draft--p left">這次的 2023 報告於 2022 最後一週釋出（<a href="https://cdn.businessoffashion.com/reports/The_State_of_Fashion_2023.pdf" target="_blank" class="draft--a">全檔連結在此</a>），是 BOF 與麥肯錫的協力之作。此篇文章是我個人的摘要，我將條列我認為重要的關鍵資訊，並且跳過 BOF 對於企業領導人，如中東最大的精品銷售渠道 <a href="https://www.chalhoubgroup.com/" target="_blank" class="draft--a">Chalhoub Group</a> 、美國輕奢品牌如 Coach 與 Kate Spade 母集團 <a href="https://www.tapestry.com/" target="_blank" class="draft--a">Tapestry</a> 的專訪內容等。由於我個人感興趣的的主題不見得符合不同讀者的偏好，看完這篇若有興趣，依舊推薦讀者閱讀原文報告。</div>
 <div class="draft-block draft--p left">那我們開始吧。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-ftmt3"><span style="font-weight: bold; ">2023 最關鍵的策略方向：</span>未知下韌性的不同樣貌（Resilience in the Face of Uncertainty）</h2>
 <div class="draft-block draft--p left">不同於過去兩年，全球新冠肺炎 Covid-19 已經不再扮演商業中的風險角色。在疫苗施打率大幅拉高以及弱化的病毒強度下，跨國境的旅遊重啟不只刺激消費者重新進行消費，流暢的物流系統諸如供應鏈（Supply Chain Strategy）路徑以及出貨量級都逐漸復甦，部分甚至已經達到疫情前的水準，使 2022 前半年產業表現強勁。然而 2022 年 2 月爆發的<a href="https://zh.wikipedia.org/wiki/%E4%BF%84%E4%B9%8C%E6%88%98%E4%BA%89" target="_blank" class="draft--a">俄烏戰爭</a>卻成為新的經濟風險：這個因為地緣政治而起的重大事件除了短期內造成的戰亂、難民問題，俄羅斯與烏克蘭作為能源供給的重大供應與轉運者，也不再能夠提供穩定的天然氣資源，原物料、能源等作為企業的固定成本也自然成為營運壓力。</div>
 <div class="draft-block draft--p left">長期影響不僅於此：飆高的能源價格同時也拉抬了民生所需花費，讓世界大型經濟體諸如歐洲、北美受到直接的通膨衝擊（Inflation）。連帶而來的經濟緊縮也直接的反應在消費者對於購物的選擇上：即便炫耀性以及定價極高端的精品消費客群，僅是從<span style="font-weight: bold; ">「多買」變得「少買」</span>；然而被歸類為一般消費品的時尚、織品消費客群，則有可能進入<span style="font-weight: bold; ">負成長</span>。若想知道這兩種類型的企業定位違和，建議閱讀舊文<a href="https://vocus.cc/article/5f69e1c0fd89780001f22f2a" target="_blank" class="draft--a">時尚與精品不是同義詞：企業營運的定位策略（Positioning）</a></div>
-<h3 class="draft-block draft--h3" name="header-a92uk"></h3>
 <h3 class="draft-block draft--h3" name="header-fe83p"><span style="font-weight: bold; ">簡而言之，BOF 與麥肯錫提出的 2023 年關鍵預期數據如下：</span></h3>
 <ul>
   <li class="draft-block draft--li">全球主要大經濟體 GDP 成長率預期分別為歐洲 1%；美國 1.5%；中國 5 - 7%</li>
@@ -25,10 +23,9 @@ author: 無鴉片評論
   <li class="draft-block draft--li">全球非精品之時尚產業（Non-Luxury Fashion）成長率約為 2 - 3%</li>
   <li class="draft-block draft--li">個別市場非精品時尚產業成長率則為歐洲 -4 - 1%；美國 1 - 6%；中國 2 - 7%</li>
 </ul>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1252px" class="image-block-prerender" data-src="https://images.vocus.cc/ba7e1dee-0cf1-4e8b-a0e8-58ef50ce02c1.png" data-width="1252" data-height="784" data-position="center" src="https://images.vocus.cc/ba7e1dee-0cf1-4e8b-a0e8-58ef50ce02c1.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business Of Fashion &amp; 麥肯錫：2023 全球時尚與精品商業報告摘要</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/ba7e1dee-0cf1-4e8b-a0e8-58ef50ce02c1.png" data-width="1252" data-height="784" data-position="center" src="https://images.vocus.cc/ba7e1dee-0cf1-4e8b-a0e8-58ef50ce02c1.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business Of Fashion &amp; 麥肯錫：2023 全球時尚與精品商業報告摘要</figcaption></div></figure>
 <div class="draft-block draft--p left">執得一提的是，其他較小但是成長強勁的市場，諸如開發中市場<span style="font-weight: bold; ">東南亞</span>，亦或是成長紅利未減，同時又受惠於原物料價格飛漲的<span style="font-weight: bold; ">中東市場</span>，都將有不俗的表現。</div>
 <div class="draft-block draft--p left">產業經營者對於自我品牌是否要定為為「精品（Luxury）」還是「時尚（fashion）」，或許亦可以從經濟萎縮時期的市場驅動力進行策略性考量。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-9sp6p">大盤緊縮：全面審視現有訂價與生產策略</h2>
 <div class="draft-block draft--p left">總體經濟造成的營運壓力下，BOF 與麥肯錫提出幾項策略供企業自處。以下將以所需時間以成效顯現的速度為軸進行摘要。</div>
 <h3 class="draft-block draft--h3" name="header-3ussi">因應毛利壓力：收益項＆成本項需雙管齊下</h3>
@@ -41,7 +38,6 @@ author: 無鴉片評論
   <li class="draft-block draft--li"><span style="font-weight: bold; ">高價格彈性之入門與特殊款項，將降價刺激消費，以確保清倉</span>：</li>
 </ul>
 <div class="draft-block draft--p left">較不受到消費者待見的特殊款項以及存貨量過高的基本款項，則將會以折扣方式在節慶大量出清，刺激消費者消費，以減少積壓的存貨成本。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; ">同理，為了確保企業策略的一致性，以生產面而言：</span></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">減少總產品類項，以降低生產營運成本：</span></li>
@@ -55,13 +51,10 @@ author: 無鴉片評論
   <li class="draft-block draft--li"><span style="font-weight: bold; ">審視銷售通路，必要時候外包：</span></li>
 </ul>
 <div class="draft-block draft--p left">不少時尚與精品企業擁有不同類型的銷售渠道，然而維持銷售渠道的成本也可能是一筆支出。就算是自營電商此種相較而言成本較低的選項也還有改善空間。若不介意品牌與渠道的形象矛盾，出貨與倉儲外包給第三方平台公司如電商物流平台 Amazon 也是一個選項。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">關於倉儲管理以及通常時裝的生產與採購週期，可以從舊文<a href="https://vocus.cc/article/6012cabefd897800012e47ad" target="_blank" class="draft--a">營運與行銷的關鍵節點：時裝周不只潮，它可是門好生意</a>中理解時裝產業裡各產品類項的基本營運模式。而為什麼品牌形象有可能與數位通路互斥，也可參考另文<a href="https://www.so.sofasoda.com/blog/luxury-ecommerce-wars" target="_blank" class="draft--a">精品電商的板塊挪移：品牌形象與數位轉型的兩難選擇</a>。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-cp0ih">基本營運之外的長期投資：永續為首，元宇宙為後</h3>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/96417362-2775-4127-bd7c-8e6aa86f3d49.png" data-width="1280" data-height="649" data-position="center" src="https://images.vocus.cc/96417362-2775-4127-bd7c-8e6aa86f3d49.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://www.gucci.com/uk/en_gb/st/stories/inspirations-and-codes/article/zepeto-x-gucci" target="_blank" class="draft--a">GUCCI &amp; ZEPETO (2021)</a></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/96417362-2775-4127-bd7c-8e6aa86f3d49.png" data-width="1280" data-height="649" data-position="center" src="https://images.vocus.cc/96417362-2775-4127-bd7c-8e6aa86f3d49.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"><a href="https://www.gucci.com/uk/en_gb/st/stories/inspirations-and-codes/article/zepeto-x-gucci" target="_blank" class="draft--a">GUCCI &amp; ZEPETO (2021)</a></figcaption></div></figure>
 <div class="draft-block draft--p left">除了上述企業必須及時調整的中短期策略，精品與時尚企業針對長期而言的投資策略也有方向上的基本共識。而其中，永續性（Sustainability）與元宇宙（Metaverse）值得借鏡。簡而言之：</div>
-<div class="draft-block draft--p left"></div>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">永續性之所以劇烈影響企業營運，在於極端氣候造成的原料供應問題：</span></li>
 </ul>
@@ -70,12 +63,10 @@ author: 無鴉片評論
   <li class="draft-block draft--li"><span style="font-weight: bold; ">元宇宙依舊在初始發展階段，目前尚不是企業主要著眼之重大投資：</span></li>
 </ul>
 <div class="draft-block draft--p left">對比於直接影響到產品生產的永續性問題，目前元宇宙相關運用皆還在初生階段，更多用於以短期活動為主的行銷活動。不過元宇宙具體的營運運用，如客戶關係經營（Customer Relationship Management）以及驗證真偽（authenticity）等皆是必要且需要進行優化的面向，後續看漲。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-lep5">消費移轉：品項偏好隨著世代文化變革產生極大變異</h2>
 <div class="draft-block draft--p left">談完基礎的企業生產以及銷售策略，在大環境緊縮下，消費者行為也有眾多改變。以下也將針對幾個調查中提及的重大差異進行介紹：</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-4v143"><span style="font-weight: bold; ">美、歐、亞三大市場：在地客以及觀光客的消費行為差異</span></h3>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1438px" class="image-block-prerender" data-src="https://images.vocus.cc/c1a088f5-6a31-46c1-b306-a679421f1472.png" data-width="1438" data-height="882" data-position="center" src="https://images.vocus.cc/c1a088f5-6a31-46c1-b306-a679421f1472.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business Of Fashion &amp; 麥肯錫：2023 全球時尚與精品商業報告摘要</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/c1a088f5-6a31-46c1-b306-a679421f1472.png" data-width="1438" data-height="882" data-position="center" src="https://images.vocus.cc/c1a088f5-6a31-46c1-b306-a679421f1472.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Business Of Fashion &amp; 麥肯錫：2023 全球時尚與精品商業報告摘要</figcaption></div></figure>
 <ul>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">美國在地市場消費將會有非常明顯的消費移轉</span>：消費者受制於通膨，將選擇更平價的替代品（<span style="font-style: italic; ">trading</span> down）。若以世代而言，越年輕的世代因為平均家戶收入更低，這個傾向也會越發明顯。詳情可看上圖圖解。</li>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">由於美金升值，美國觀光客在國際上反而可以享受強勢貨幣紅利</span>，預計將會有大量觀光客前往歐洲市場購買傳統三大精品集團的產品：兩大法國集團 LVMH 和 Kering 都已經受益於此，在去年年末創造了 50% 上下的同比銷售佳績。</li>
@@ -84,17 +75,14 @@ author: 無鴉片評論
   <li class="draft-block draft--li"><span style="font-weight: bold; ">已開放國境的亞洲國家也將受益於外國旅客回歸</span>：觀光客的回歸將為熱門觀光國家帶來巨大的銷售利潤。這個不用麥肯錫寫，日本街頭都是台灣觀光客大概也證明了這項事實。</li>
   <li class="draft-block draft--li"><span style="font-weight: bold; ">雖然整體量級依舊巨大，中國在地消費者信心相對疲軟：</span>2022 年 10 月黃金周的消費金額比去年同比減少了 26%，是自 2014 年開始的最低點，也僅有疫情前最高峰 2019 年銷售額的一半。雖然長期而言中國市場依舊看漲，舉棋不定的防疫政策也將會是企業進軍中國時必須要考量的風險項。</li>
 </ul>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">精品與時尚三大市場之外個別市場中也會因為地域、發展程度、政策等而有些許差異。若有主要專攻的市場，老話一句，依舊推薦回去原文報告審慎閱讀。</div>
 <div class="draft-block draft--p left">接下來我們主要看消費者對於品項的偏好移轉。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-1rffm">後疫情時代遠距工作成潮流，休閒崛起，正式趨向兩極</h3>
 <div class="draft-block draft--p left">遠距工作成為新常態之後，過往在時裝中具有重要角色的正式服裝（formal wear）也在轉型中：典型的辦公室商務穿著逐漸喪失主導地位，逐漸往休閒（<a href="https://uk.indeed.com/career-advice/starting-new-job/business-casual" target="_blank" class="draft--a">Business Casual</a>）靠攏，或甚至不再有所謂「工作服裝」與「休閒服裝」的差異；因為特殊場合，如婚禮、典禮等而生的正式服飾，反而更因為疫情後放寬的政策而蓬勃發展，成為正式服裝的主力。</div>
 <div class="draft-block draft--p left">去年一個由消費者自主發起的時尚潮流 <span style="font-style: italic; ">#</span>CoastalGrandmother 即是一個很明顯的休閒範例：寬鬆的白色鈕扣恤衫、棉麻長褲、羊絨衫、漁夫帽，有如農莊或是漁村的婦人悠然自得的生活型態，在新興社群媒體 TikTok 上的追隨者如過江之鯽。</div>
 <div class="draft-block draft--p left">同時， <a href="https://www.hugoboss.com/uk/home" target="_blank" class="draft--a">Hugo Boss</a> 的 CEO Daniel Grieder 也說：</div>
 <blockquote class="draft-block draft--blockquote">疫情後大家的確想要重新穿上 smart casual 的服飾，但不同的是，他們可再也不想穿上（看起來休閒但）不舒服的服裝了。（<span style="font-style: italic; ">It’s a clear trend that</span> <span style="font-style: italic; ">they want to dress up in a smartcasual</span> <span style="font-style: italic; ">way, but they don’t want</span> <span style="font-style: italic; ">to wear something that is not</span> <span style="font-style: italic; ">comfortable anymore.</span>）</blockquote>
 <div class="draft-block draft--p left">企業如何重新掌握新的消費者潮流以及推出合適的設計，將會是後疫情時代的重要課題。</div>
-<div class="draft-block draft--p left"></div>
 <h3 class="draft-block draft--h3" name="header-8oh29">跨性別流動使得男女裝跨售成為新興主力</h3>
 <blockquote class="draft-block draft--blockquote"><span style="font-style: italic; ">Gender neutral is not a trend, it’s a reality</span>. - <span style="font-style: italic; ">Jonathan Anderson, </span>C<span style="font-style: italic; ">reative director of Loewe</span>, 2021</blockquote>
 <div class="draft-block draft--p left">性別並非二元而是光譜的認知逐漸普世，且新興世代 Gen-Z 對於自我表態的開放多樣性，使如今男女裝跨售成為可能。根據麥肯錫的調查指出，56% 的 Gen-Z 認為衣著不應該受限於性別，而是著重於「能否自我呈現」。2020 年的韓國搜尋網站 Navar 紀錄中甚至指出，中性服裝的搜尋量也是前一年同比的兩倍之多。</div>
@@ -104,17 +92,13 @@ author: 無鴉片評論
   <li class="draft-block draft--li">讓消費者選擇有與自己對反性別印象或是特徵的服裝設計，如 Tiktok 上超過三十億次瀏覽量的標籤 <span style="font-style: italic; ">#femboy</span> 與 <span style="font-style: italic; ">#mascgirl</span></li>
 </ul>
 <div class="draft-block draft--p left">報告中預計，約莫在 2035 年時 Gen-Z 會成為精品與時尚市場的消費主力。性別流動時尚無論如何都將在長期扮演重要角色，企業如何兼顧忠誠但偏好經典的中壯年世代，以及穩固新興客群，想必將是設計與品牌形象的下一個重要功課。</div>
-<div class="draft--imgFull"><div><img style="height:2289px" class="image-block-prerender" data-src="https://images.vocus.cc/bc527e5e-b16e-46a7-af66-74c5a2c7fe88.png" data-width="2289" data-height="1287" data-position="full" src="https://images.vocus.cc/bc527e5e-b16e-46a7-af66-74c5a2c7fe88.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">帶有光譜兩端特徵且模糊二元性別的流動時尚（fluid fashion）：比如 Timothée Chalemet 讓媒體驚艷的紅毯男裝即是一例</figcaption></div></div>
+<div class="draft--imgFull"><div><img data-src="https://images.vocus.cc/bc527e5e-b16e-46a7-af66-74c5a2c7fe88.png" data-width="2289" data-height="1287" data-position="full" src="https://images.vocus.cc/bc527e5e-b16e-46a7-af66-74c5a2c7fe88.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">帶有光譜兩端特徵且模糊二元性別的流動時尚（fluid fashion）：比如 Timothée Chalemet 讓媒體驚艷的紅毯男裝即是一例</figcaption></div></div>
 <h2 class="draft-block draft--h2" name="header-8fqi5">結語</h2>
 <div class="draft-block draft--p left">後疫情時代的時尚與精品產業已有巨大的變革，企業內部的財務獲利結構整體而言也挺健康。然而，解封後的紅利之外，預期之外的經濟緊縮帶來，「韌性」以及「價值」作為企業經營核心，快速微調短期營運策略以及放眼未來投資，都將會是熊市對企業主的重大考驗。</div>
 <div class="draft-block draft--p left">The State of Fashion（2023）是一分太精彩的報告，有許多值得深入探討的細節，礙於個人興趣以及最佳閱讀字數考量，難在此篇摘要中詳盡。若讀者對現在精品與時尚產業的大議題有興趣，諸如實體展店策略（DTC Reckoning）、<a href="https://www.voguehk.com/zh/article/fashion/fashion-green-washing/" target="_blank" class="draft--a">「漂綠」（Greenwashing）的道德與企業風險</a>、二級市場銷售（Pre-owned &amp; Second handed market）等，或是業界各大巨頭 C-suite 領導人的專訪，我依舊推薦閱讀這份長達 75 頁的原文報告。無論是適切理解世界上的重要潮流、各區域特殊的經營現況還是長期的內部資源分配策略，老話一句，都會是立足亞洲或是台灣的企業主，或是有志於此的專業人士重要的知識彈藥。</div>
 <div class="draft-block draft--p left">我的興趣主要將聚焦於時尚與精品產業在數位領域裡的即時進展，列舉但不局限於數位策略轉型、新興數位精品、消費者數位體驗、數位渠道的客戶關係經營、產品真偽驗證技術以及二手市場風險等。如今我在倫敦，除了先前建立的法國市場資訊之外，因為地利之便，我之後也將摘要新興的區塊鏈系統市場報告以及藝術市場報告，建立 2023 年整體市場的基礎認識。如果對區塊鏈如何應用於基礎的商務需求上，亦推薦閱讀舊文<a href="https://vocus.cc/article/61e5dd73fd8978000170624a" target="_blank" class="draft--a">不只是創作經濟，而是關係經濟：NFT 究竟是什麼？</a></div>
 <div class="draft-block draft--p left">世上還有很多精彩事情正在發生，想知道更多？我們下篇報告見。</div>
-<div class="draft-block draft--p left"></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">文化有情，創意有價——《文化商業摘要 The Business of Culture》是一個著眼於<span style="font-weight: bold; ">文化組織企業化</span>，或甚至是<span style="font-weight: bold; ">商務企業人文化</span>的思考專欄，期待藉由專欄創作讓更多台灣的商業人與文化人理解跨界的應用方法，理解到好的文化產品與服務可以有更高的定價空間，更強大的社群影響，以及更深遠的價值認同。</div>
 <div class="draft-block draft--p left">如果你認同我的理念，抑或你也想知道跨界思維的可能性，或甚至你也想一起腦力激盪。歡迎<span style="font-weight: bold; ">追蹤</span>、<span style="font-weight: bold; ">留言、贊助</span>以及<span style="font-weight: bold; ">加入 Vocus Premium</span>，就能即時獲得好內容。<a href="https://www.facebook.com/TBOCreport" target="_blank" class="draft--a">臉書</a>專頁也會定期整理推播重大商業新聞，跟我的即時評論，詳知世界動態。</div>
 <div class="draft-block draft--p left">讓我們在思索的過程中，一起開創出下一個世代的亞洲文藝復興。</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
