--- a/_posts/2023-01-08-VOCUS-半兵衛脇差-日本亟盼的聯合國入常-國家正常化最後一哩路與抗衡中國稱覇的戰略高地.html
+++ b/_posts/2023-01-08-VOCUS-半兵衛脇差-日本亟盼的聯合國入常-國家正常化最後一哩路與抗衡中國稱覇的戰略高地.html
@@ -14,7 +14,7 @@ author: 謝文生
 <div class="draft-block draft--p left">特別是在去年俄羅斯入侵烏克蘭一事，因著俄羅斯身為安理會「擁有否決權」的常任理事國身份，讓「安理會改革」，再度成為世人關注的焦點。</div>
 <div class="draft-block draft--p left">而此次是日本第12度成為安理會非常任理事國這件事，本身就是個紀錄，僅次在後的是巴西的11次。就日本而言，終極的追求目標在於要成為跟美法英中俄五國一樣的安理會「常任」理事國的地位。</div>
 <div class="draft-block draft--p left">究竟日本為何一直鍥而不捨地追求「聯合國入常」呢？筆者認為就遠因來說，在國民心理因素部份，有日本要擺脫二戰陰影的「<span style="text-decoration: underline; font-weight: bold; ">國家正常化最後一哩路</span>」的需要；以及就近因來說，在區域安全上，唯有「聯合國入常」，才能讓日本取得「<span style="text-decoration: underline; font-weight: bold; ">抗衡中國稱覇的最重要戰略高地</span><span style="font-weight: bold; ">』」</span>。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1703px" class="image-block-prerender" data-src="https://images.vocus.cc/9e832939-9dad-436a-9571-a207b46fd48f.jpg" data-width="1703" data-height="1703" data-position="center" src="https://images.vocus.cc/9e832939-9dad-436a-9571-a207b46fd48f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄在聯合國大會上演講（2022年9月21日，照片來源：岸田文雄臉書)</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/9e832939-9dad-436a-9571-a207b46fd48f.jpg" data-width="1703" data-height="1703" data-position="center" src="https://images.vocus.cc/9e832939-9dad-436a-9571-a207b46fd48f.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄在聯合國大會上演講（2022年9月21日，照片來源：岸田文雄臉書)</figcaption></div></figure>
 <div class="draft-block draft--p left">日本自從1960年代經濟從戰後蕭條中復甦之後，就一直希望能在聯合國裡取得跟其經濟實力相符的國際地位，才會在1956年加入聯合國後1958年就立刻爭取首次「非常任理事國」的機會；包括今年上任在內，等於64年內出任12次（每次2年），差不多是每5年爭取一次。</div>
 <div class="draft-block draft--p left">日本長年提供巨額的資金給聯合國，有其歷史上補償二戰的因素在內，一直到2000年時其捐款都還佔聯合國經費的20%，僅次於美國；即便近年提供的資金佔比降至8%左右，但也還是第三多的金援國（2019年起，次於美、中）。</div>
 <div class="draft-block draft--p left">但是在聯合國裡，日本長期的貢獻跟地位「名實不符」，讓日本未能成為聯合國安理會的常任理事國這點，一直是日本心中最大的痛。</div>
@@ -34,6 +34,3 @@ author: 謝文生
 <div class="draft-block draft--p left">因此，要增加聯合國安理會常任理事國席次的議題，恐怕只有哪天，俄羅斯跟中國都陷入如同1990年代的巨變，亟需國際援助的前題下，方有可能。或者，另一條路就是美國川普總統曾經『宣稱考慮』要組成「新的聯合國」的時候，或許是另一個機會吧。</div>
 <div class="draft-block draft--p left">（本文結束）</div>
 <div class="draft-block draft--p left">（如您覺得這篇文章值得給予作者鼓勵， 請按下方心形的讚，感謝！）</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
