--- a/_posts/2023-01-10-VOCUS-理髮.html
+++ b/_posts/2023-01-10-VOCUS-理髮.html
@@ -23,5 +23,4 @@ author: 直樹的流浪之歌
 <div class="draft-block draft--p left">在感覺沒有任何特別的平凡假日裡，我的一天好像因為此刻才被打開，不禁想起漫畫進擊的巨人中，阿爾敏曾說過的話語：「那一天的風很暖和，光是跑步就覺得很舒服...很多枯葉在空中飛舞。那時不知為何我這麼想著。我是為了在這裡三個人一起賽跑才出生的...雨天待在家看書、松鼠吃著我給的松果、還有大家一起逛市場時...我都會這樣想。」</div>
 <div class="draft-block draft--p left">看似日復一日的生活之流中，有時蘊藏著意想不到的驚喜。不抱有任何期待，也才能深入每一個平凡，卻又充滿奇蹟的時刻。而我在曾經的流浪中所尋求的，不正是那樣的時刻嗎？</div>
 <div class="draft-block draft--p left">走出理髮室，多麼晴朗的一天。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/884bc119-6272-4027-871f-84d1e4083c86.jpg" data-width="2048" data-height="1152" data-position="center" src="https://images.vocus.cc/884bc119-6272-4027-871f-84d1e4083c86.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2018.9 泰國清孔</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/884bc119-6272-4027-871f-84d1e4083c86.jpg" data-width="2048" data-height="1152" data-position="center" src="https://images.vocus.cc/884bc119-6272-4027-871f-84d1e4083c86.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">2018.9 泰國清孔</figcaption></div></figure>
