--- a/_posts/2023-01-11-VOCUS-公務員日常不日常-day105-隨機應變的活動工作人員.html
+++ b/_posts/2023-01-11-VOCUS-公務員日常不日常-day105-隨機應變的活動工作人員.html
@@ -8,8 +8,7 @@ tags: blog
 author: 新葉
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:6000px" class="image-block-prerender" data-src="https://images.unsplash.com/photo-1635921152718-06a19ec70a6c?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGJvYXJkZ2FtZXxlbnwwfHx8fDE2NzM0NDAzMDM&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6000" data-height="3376" data-source="{&quot;name&quot;:&quot;ibmoon Kim&quot;,&quot;url&quot;:&quot;https://unsplash.com/@kimibmoon&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center" src="https://images.unsplash.com/photo-1635921152718-06a19ec70a6c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.unsplash.com/photo-1635921152718-06a19ec70a6c?crop=entropy&amp;cs=tinysrgb&amp;fm=jpg&amp;ixid=MnwyNTY4N3wwfDF8c2VhcmNofDR8fGJvYXJkZ2FtZXxlbnwwfHx8fDE2NzM0NDAzMDM&amp;ixlib=rb-4.0.3&amp;q=80" data-width="6000" data-height="3376" data-source="{&quot;name&quot;:&quot;ibmoon Kim&quot;,&quot;url&quot;:&quot;https://unsplash.com/@kimibmoon&quot;,&quot;provider&quot;:&quot;Unsplash&quot;}" data-position="center" src="https://images.unsplash.com/photo-1635921152718-06a19ec70a6c" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">近期大小活動不斷，從我主辦的活動結束後短短一個月內辦了三次活動，密集集中在週六白天，幾乎沒有周休二日的機會。</div>
 <div class="draft-block draft--p left">不過很慶幸後來的活動都是其他課室主辦，我只要負責當個聽指令做事的工作人員就好。</div>
 <div class="draft-block draft--p left">以往其他課室的活動都是由某位主辦姐姐負責張羅，我也常常跟她配合攤商招商的任務，算是合作愉快。</div>
@@ -26,7 +25,6 @@ author: 新葉
 <div class="draft-block draft--p left">「是後天活動要用的。」戴著口罩看不出心虛，我用認真的語氣說：「我們攤位組會協助攤商，而有時候民眾可能需要一點互動，就由我們跟民眾玩桌遊，增進社區感情。」</div>
 <div class="draft-block draft--p left">「喔，換句話說，如果民眾不需要跟你們互動，你們就自己玩。」精明的課長聽出弦外之音，還給我講出來。自己知道就好啊喂！</div>
 <div class="draft-block draft--p left">不過畢竟不是本課室主辦的活動，課長沒再說什麼，默許了這件事情。</div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">就這樣，我們攤位組完成了事前準備，迎來活動當日。</div>
 <div class="draft-block draft--p left">在清冷的風中，我抵達小市集地點－－在健行活動的終點站。似乎預計的行程就是讓參加者健行到終點，然後逛逛市集這樣。</div>
 <div class="draft-block draft--p left">換句話說，在民眾走來終點前，都沒有人！</div>
