--- a/_posts/2023-01-11-VOCUS-台灣港人速寫日記-170-報紙-新聞-難以培養的台式生活習慣.html
+++ b/_posts/2023-01-11-VOCUS-台灣港人速寫日記-170-報紙-新聞-難以培養的台式生活習慣.html
@@ -9,7 +9,7 @@ author: 天爸
 ---
 
 <div class="draft-block draft--p left">雖然住在台灣八年了，但我們一家真的成為台灣人了嗎？這個問題最近一直盤旋在腦海之中。我們家只要是假期，都會台灣南北東西無處不去，我們對台灣各地的情況，比不少台灣朋友更熟；對所居住城市的歷史，往往比本地人更清楚。然而這樣我們就是台灣人了嗎？天爸為此感到懊惱。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1242px" class="image-block-prerender" data-src="https://images.vocus.cc/c49a1103-35fa-4651-a204-f623a9e3516d.jpg" data-width="1242" data-height="931" data-position="center" src="https://images.vocus.cc/c49a1103-35fa-4651-a204-f623a9e3516d.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/c49a1103-35fa-4651-a204-f623a9e3516d.jpg" data-width="1242" data-height="931" data-position="center" src="https://images.vocus.cc/c49a1103-35fa-4651-a204-f623a9e3516d.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left">我們是不是台灣人呢？例如我們一家真的不常看台灣的新聞，不太知道台灣的最新消息，我們這樣算是一個台灣人的表現嗎？</div>
 <div class="draft-block draft--p left">不是不想看新聞，而是實在對台灣的新聞提不起勁，例如經常是政治八卦，但我們對那些政治人物不太認識，也對政治人物之間的對話，常被媒體刻意變成一種八卦感到不滿。既然覺得這樣子的媒體操作不好，所以總是對看新聞這回事提不起勁。</div>
 <div class="draft-block draft--p left">例如最近一則政治新聞「<span style="font-style: italic; ">「萬安」兩字入春聯 王世堅：天天都「萬安警報」嗎？</span>」天爸真的不懂其新聞價值為何。但是每天都有很多這類新聞，讓天爸對台灣新聞興趣缺缺。</div>
