--- a/_posts/2023-01-15-VOCUS-投行明星-一流政經分析師-ruchir-sharma-展望-2023-的投資指南-焦點媒體深讀-8.html
+++ b/_posts/2023-01-15-VOCUS-投行明星-一流政經分析師-ruchir-sharma-展望-2023-的投資指南-焦點媒體深讀-8.html
@@ -8,7 +8,6 @@ tags: blog
 author: 趙君朔
 ---
 
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-b6ppd">前言</h2>
 <div class="draft-block draft--p left">Ruchir Sharma之前是投資銀行摩根史坦利負責新興市場的主管，他因為持續將自己觀察新興市場的政治、經濟和金融發展的心得寫成內容豐富，充滿神準預測（除了對中共）的暢銷好書而揚名全球知識與投資圈。</div>
 <ul>
@@ -22,13 +21,11 @@ author: 趙君朔
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">在他細數今年的十大趨勢之前，他先提醒讀者，他在和許多國家領導人談過話後，感覺大家都僵住了。面對貨幣不再寬鬆的新世界，他們不知道該怎麼辦。同時有太多人守住固有的行為模式，希望不需要面對變化中的世界。投資人還是假設央行會出手救援，重新釋放大量貨幣到市場上，因此他們繼續把錢大舉投到過去證明有效的東西上：科技基金、私募基金和風投公司；政府還是依然靠舉債來應付支出、一般大眾拒絕賣掉房子就好像快錢（easy money）一定會回來一樣。</div>
 <div class="draft-block draft--p left">但現在的貨幣緊俏絕非只是一時的衝擊。通膨的新常態會在 4﹪，而不是 2﹪，所以利率不會跌回零。這種狀況只要拖下去，靠快錢爽爽過的商場大亨、企業、貨幣和國家會出事，讓位給新贏家。有些事會變更好。成本高的可笑的數位貨幣和電視劇的時代都會過去。2023 會是要狠心做出判斷的一年。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1079px" class="image-block-prerender" data-src="https://images.vocus.cc/ccce608c-476d-484a-8380-e4b8f71a512a.png" data-width="1079" data-height="1232" data-position="center" src="https://images.vocus.cc/ccce608c-476d-484a-8380-e4b8f71a512a.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Ruchir Sharma本文的照片</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/ccce608c-476d-484a-8380-e4b8f71a512a.png" data-width="1079" data-height="1232" data-position="center" src="https://images.vocus.cc/ccce608c-476d-484a-8380-e4b8f71a512a.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Ruchir Sharma本文的照片</figcaption></div></figure>
 <h2 class="draft-block draft--h2" name="header-2gos6">1. 美元見頂：</h2>
 <div class="draft-block draft--p left">美元當世界貨幣霸主已有 102 年之久，比從 15 世紀開始之前五個世界貨幣霸主稱霸的平均時間還要多 8 年。美元早該衰落了，只是在缺乏有力的挑戰下，目前流行的假設還是美元會繼續稱霸。不過美元的稱霸並非穩穩地往上爬，而是在頗長的循環中上升下滑。前面兩次上升循環－70 年代末期和 90 年代中期－都持續大概 7 年。但這次的上升循環到了去年 10 月差不多有 11 年了。從某些方法去衡量美元的價格是來到史上新高，也終於再度把紐約變成全球最貴城市。</div>
 <div class="draft-block draft--p left">美元大概被高估了 25﹪，這也預告了將要下滑。去年 10 月美元果然開始從典型的轉折點－超過長期趨勢的 20﹪－往下跌，這在過去通常代表者連續數年的空頭行情。和其他國家比起來美國今年的經濟成長將更慢、升息幅度會較小。那麼美元將會進一步下跌，美國人的購買力會下降，但其他貨幣的使用者會好一點。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/b7e92f27-a7b6-47b1-ba6f-1ec42ed2d3c9.png" data-width="1080" data-height="1401" data-position="center" src="https://images.vocus.cc/b7e92f27-a7b6-47b1-ba6f-1ec42ed2d3c9.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">美元指數的長期走勢</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/b7e92f27-a7b6-47b1-ba6f-1ec42ed2d3c9.png" data-width="1080" data-height="1401" data-position="center" src="https://images.vocus.cc/b7e92f27-a7b6-47b1-ba6f-1ec42ed2d3c9.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">美元指數的長期走勢</figcaption></div></figure>
 <h2 class="draft-block draft--h2" name="header-bohsd">2. ROW 的崛起：</h2>
 <div class="draft-block draft--p left">ROW 是代表美國之外的世界其他地方（Rest of the World）。其他國家的金融市場長期都在美國金融市場的陰影之下。既然美國市場是過去一個世紀全球表現最佳的市場，為何要投資在別的地方呢? 但如果考量到過去實際的漲跌區間，美股過去都是表現超過世界其他市場十年，然後下一個十年就表現弱於其他市場，所以 50、70 和 2000 年都是投資美國之外市場的大好時機。</div>
 <div class="draft-block draft--p left">在上一個十年的牛市中，美國股市市值大增，在 21 年達到全球市值的 6 成，超過其長期平均的 15 ﹪。但美國其他經濟數據占全球的比重沒有那麼大：佔全球不到一半的公司營收、全球 1/4 的GDP、1/5的上市公司還有緊緊 4﹪的人口。當美國股市的市值和其他市場比達到二戰後新高時，許多緊抱美國公司股票的投資人都假設美國還能再創新高而不只是守成。這並不是個安全的假定：有個估計指出上個十年美國公司的獲利有一半是來自於較低的低利率。但現在快錢的時代已經結束了。雖然說其他國家也受惠於這種快錢，但用財務技巧拉高營收是美國獨有。</div>
@@ -39,8 +36,7 @@ author: 趙君朔
 <h2 class="draft-block draft--h2" name="header-combe">4. 錢少質佳的電視節目</h2>
 <div class="draft-block draft--p left">不受限的拿到成本低的信貸幫忙助長了眾所稱讚的電視”黃金年代”。過去五年中大串流服務公司花在新內容上的成本從不到 900 億跳到 1400 多億美金。為電視劇所寫的劇本也暴增。但和其他被快錢造就的熱門趨勢一樣，電視被太多錢寵壞了：結果是製造出更多品質更遜一籌的產品。在評價網站 IMDB 上對網飛（Netflix）出品的電視劇評分的平均分數從 2010 年代中期的 8.5 掉到 2022 年的6.7。如何從平凡作品充斥的選單中找出少數值得看的影集變成餐桌上常見的話題。</div>
 <div class="draft-block draft--p left">今年觀眾的迷失感會減少一些。最近幾個月。大串流網站已經把焦點從不論用何種方式吸引訂閱者轉到獲利。他們減少訂購的節目數量並且對於新劇本設定較高的標準。這是在這個新時代中唯一一個可以用較少的錢產出更好產品的方法。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1080px" class="image-block-prerender" data-src="https://images.vocus.cc/b1c573a1-7f25-44b2-8f35-78eb06ce69c0.png" data-width="1080" data-height="1412" data-position="center" src="https://images.vocus.cc/b1c573a1-7f25-44b2-8f35-78eb06ce69c0.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Ruchir的團隊用蒐集到的資料做出來的圖表證明電視劇成本上升但品質每下愈況</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/b1c573a1-7f25-44b2-8f35-78eb06ce69c0.png" data-width="1080" data-height="1412" data-position="center" src="https://images.vocus.cc/b1c573a1-7f25-44b2-8f35-78eb06ce69c0.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Ruchir的團隊用蒐集到的資料做出來的圖表證明電視劇成本上升但品質每下愈況</figcaption></div></figure>
 <h2 class="draft-block draft--h2" name="header-cdq6l">5. 泡沫的回聲(Eco Bubbles)：</h2>
 <div class="draft-block draft--p left">泡沫不會一下子都破掉，往下滑時會穿插一些叫稱為”泡沫回聲”的大反彈。這樣的反彈緩和了許多著名泡沫的墜地如 70 年代的大宗商品和 90 年代末期的網路科技泡沫。在 2001 年初，科技股跌了 70﹪，但在同一年發生兩次大反彈，泡沫的回聲看來很驚人，讓科技股反彈了 45﹪。但這個很高的百分比只是一種數學幻象－反彈開始的基期很低，所以在 2001 的反彈從來沒有讓股價回到之前的高峰，而且在次年正式觸底，在這個十年的剩下期間都持續低迷。</div>
 <div class="draft-block draft--p left">在疫情期間，泡沫在市場的每個角落跳出來，如資金池很小的股票、包括特斯拉在內的清潔能源股、加密貨幣如比特幣、特殊目的收購公司（SPAC）還有知名但沒有營收的科技股如  Lyft、Spotify。這些市場的泡沫已經破了 5 成到 7 成，但故事還沒完。那些加密貨幣大亨和馬斯克的財富還在上沖下洗中！泡沬持續背後的心理作用是很強大的：一般人不願意放棄支持泡沫背後的想法，只有信念遭到反覆打擊才會放棄。 2023 年可以預見應該會看到更多泡沫的回聲，特別是在上一個十年最被瘋狂討論的標的：美中的科技巨頭，但小心別被騙了，會有新的贏家冒出來的。</div>
@@ -60,4 +56,3 @@ author: 趙君朔
 <div class="draft-block draft--p left">在 2000 年代末，Nassim Nicholas Taleb 將”黑天鵝”這個概念家喻戶曉。這詞本來是用來描述一連串出乎意料事件帶來或好或壞變動的理論，但後來在 2008 金融危機時變成負面衝擊的同義詞，從那時候開始人們就一直在找下一隻黑天鵝在哪。</div>
 <div class="draft-block draft--p left">現在好的黑天鵝的概念可以說以藍鳥的形式重現江湖－一種少見，無法預期的事件卻帶來歡樂。地緣政治的衝擊和經濟上的悲觀從 2008 延續至今，在這個貨幣緊縮的時代可能變本加厲。在各種憂慮中，也許全世界會把風險雷達轉向探測會帶來喘息的正面衝擊。</div>
 <div class="draft-block draft--p left">下一隻藍鳥也許是俄烏戰爭發生意料之外的停戰，那麼能源和糧食的價格會馬上下來。美中關係如果解凍會提升貿易。新的數位科技若能提升生產力便能抑制通膨。這些也許都不會發生，但讓人驚喜便是藍鳥這個概念的核心。</div>
-<div class="draft-block draft--p left"></div>
