--- a/_posts/2023-01-21-VOCUS-starfighter-echoes-of-a-falling-star-18.html
+++ b/_posts/2023-01-21-VOCUS-starfighter-echoes-of-a-falling-star-18.html
@@ -9,13 +9,12 @@ author: 羽卒
 ---
 
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">封面圖片﹕</span>《Echoes of a Falling Star II》封面，由 Y. Sek 設計</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1262px" class="image-block-prerender" data-src="https://images.vocus.cc/d57d2125-5327-492f-8067-af8f255b7f88.png" data-width="1262" data-height="828" data-position="center" src="https://images.vocus.cc/d57d2125-5327-492f-8067-af8f255b7f88.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">EFS 人物關係圖<br>藍框為原作《Starfighter》的角色</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/d57d2125-5327-492f-8067-af8f255b7f88.png" data-width="1262" data-height="828" data-position="center" src="https://images.vocus.cc/d57d2125-5327-492f-8067-af8f255b7f88.png" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">EFS 人物關係圖<br>藍框為原作《Starfighter》的角色</figcaption></div></figure>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">配對﹕</span>Encke / Keeler (主)、Cain / Abel、Praxis / Deimos、Cook / Phobos</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">說明﹕</span>歐美非商業性 BL 原創漫畫《<a href="http://starfightercomic.com/comic.php" target="_blank" class="draft--a">Starfighter</a>》衍生。</div>
 <div class="draft-block draft--p left">時間線為原作主線⼗年後，完全捨棄原作中與 Project Thebes 有關的情節。<span style="text-decoration: line-through; ">因為原作的初衷是畫一堆男人在太空打炮的故事，所以</span><span style="font-weight: bold; ">未讀過原作並不妨礙理解本作。</span>為了維持故事的完整性，本作包含不少原創⾓色及⼀堆不太合理的腦洞。男孕設定採⽤⼈工醫學形式植入人造⼦宮及人造胚胎（部分參考亦舒的《美麗新世界》），並以剖腹產方式取出胎兒，跟 ABO 或雙性⼈設定無關。本作含髒話、暴力、戰爭、非自願性行為及⼗八禁描寫。</div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h3 class="draft-block draft--h3" name="header-e8u9j">第十八章</h3>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">尖銳的哨子聲讓 Encke 在一瞬間回神。</div>
 <div class="draft-block draft--p left">他瞥向傳來騷動的籃球場，無人操控的橙紅色光球彈跳了幾下，徐徐滾出場外，負責投射籃球動向的投影器將之回收，置於裁判手邊，聽候發落。</div>
 <div class="draft-block draft--p left">Encke 看見一名導航員學生倒在地上，雙手掩蓋著臉，身體因痛苦而蜷成一團。他的隊員緊張地在他身旁聚攏，關心他的傷勢，有幾位隊員夥同隊長衝向撞跌他的人興師問罪，兩隊人馬吵起架來。</div>
@@ -141,5 +140,3 @@ author: 羽卒
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <h2 class="draft-block draft--h2" name="header-1en35">註釋</h2>
 <div class="draft-block draft--p left">19. 大範圍戰場投影 (Expansive battle hologram)<br>這裡借用了山神的科幻短篇小說《長嫡》中的概念。《長嫡》收錄於布蘭登‧山德森短篇小說集《皇帝魂》之中。以下網址也有收錄原文全文﹕https://www.tor.com/2008/12/17/firstborn/</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
