--- a/_posts/2023-02-03-VOCUS-無憂-男孩的墓誌銘.html
+++ b/_posts/2023-02-03-VOCUS-無憂-男孩的墓誌銘.html
@@ -24,16 +24,11 @@ author: 私の部屋：世界、歷史、人生的万華鏡
 <figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/af7982d5-870e-40e9-bc40-a1e2bdc98e04.jpg" data-width="800" data-height="1067" data-position="center" src="https://images.vocus.cc/af7982d5-870e-40e9-bc40-a1e2bdc98e04.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">By Gryffindor - Own work, CC BY-SA 3.0, https://commons.wikimedia.org/w/index.php?curid=11434836</figcaption></div></figure>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">兩百年之後，若談到古典音樂，或是動聽的紓壓旋律，我想幾乎沒有人是不知道舒伯特這位作曲家的，<span style="font-weight: bold; ">他的音樂絕非矯情做作，而是在簡單的旋律中，自在地流露出了真摯的情感，不留痕跡地打入了聽者的內心深處</span>，所以他不只被尊稱為「古典主義」音樂發展時期的最後一位巨匠，更被視為後來德語系「浪漫主義」音樂時期的奠基者；</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/3tisvEpblig"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/3tisvEpblig"></iframe></div>
 <div class="draft-block draft--p left">當然，在藝術歌曲方面，舒伯特的成就更可說是非凡卓越，諸如《美麗的磨坊少女》（Die schöne Müllerin）與《冬之旅》（Winterreise）兩套歌曲集，都是舒伯特愛好者們不可錯過的傑作……</div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/_Zfuxu4mTlM"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/_Zfuxu4mTlM"></iframe></div>
 <div class="draft-block draft--p left">而打破台灣影史多項紀錄的賣座電影《海角七號》，裡頭出現的《野玫瑰》（Heidenröslein）旋律，更是他耳熟能詳的代表作。</div>
-<div class="draft-block draft--p left"></div>
-<div><iframe allowfullscreen src="https://www.youtube.com/embed/QG-B8inb9YE"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://www.youtube.com/embed/QG-B8inb9YE"></iframe></div>
 <div class="hr__AtomHrContainer-sc-1afmttx-0 dsBIOm draft-block"><pre class="hr__HrWrapper-sc-1afmttx-1 hUbgX draft--hr"><hr class="hr__Hr-sc-1afmttx-2 iegMSY"></pre></div>
 <div class="draft-block draft--p left">尾聲：</div>
 <div class="draft-block draft--p left">最近幾週，正逢歲末迎春，可除舊佈新之際，我對於分享文章的質與量，也有不若以往的想法，或是篤定的觀點；到底書寫「什麼」才能夠滿足創作者跟讀者之間的「互動」？而且又能夠維持一定的「距離」，讓文字成為文字應該有的樣子，兼容深度與廣度，同時綜橫經緯。</div>
