--- a/_posts/2023-01-10-VOCUS-韓國首部印太戰略報告亮點介紹-評論(下)以及和日本國家安全戰略報告基調的對比-精選報告解碼-6.html
+++ b/_posts/2023-01-10-VOCUS-韓國首部印太戰略報告亮點介紹-評論(下)以及和日本國家安全戰略報告基調的對比-精選報告解碼-6.html
@@ -10,15 +10,13 @@ author: 趙君朔
 
 <div class="draft-block draft--p left">報告的原文可從此下載</div>
 <div class="draft-block draft--p left"><a href="https://www.mofa.go.kr/eng/brd/m_5676/view.do?seq=322133" target="_blank" class="draft--a">https://www.mofa.go.kr/eng/brd/m_5676/view.do?seq=322133</a></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">三、韓國印太戰略九大核心努力方向(續)</div>
 <div class="draft-block draft--p left">5. 合作推動法治與人權</div>
 <div class="draft-block draft--p left">法治是聯合國體系三大支柱的基石：和平與安全、人權和發展。韓國的民主化和經濟發展可以歸諸於法治的推進。以此經驗為基礎，我們對理解法治在聯合國2030永續發展議程中的重要性有所貢獻，現在也正強調所有聯合國成員在國內和國際層次推展法治的努力。</div>
 <div class="draft-block draft--p left">作為上述區域性努力的必要一環，我們相信每一方在處理印太區域的紛爭時都要遵守國際法的原則還有聯合國採行的公約。從這點來看，俄羅斯武裝侵略烏克蘭是違反了聯合國憲章與國際法，並對印太的經濟和安全產生負面影響。我們會繼續以對普世價值的理解與尊重為基礎，積極參與推展人權的努力。我們會推進婦女、兒童、殘疾人士還有其他社會弱勢團體的權益，並支持他們著手強化自身能力。我們還會繼續支持本區發展中國家打下民主的基礎</div>
 <div class="draft-block draft--p left">6. 強化關鍵科技領域合作與減少數位落差</div>
 <div class="draft-block draft--p left">我們也會幫助國際標準化和國際規範以一種開放、包容的方式成形，包括和數位先進國家進行合作研發科技標準。我們還會持續參與國際努力打造開放和透明的通訊網路例如布拉格網路安全會議和在5G Open-Ran科技上和美國合作。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1280px" class="image-block-prerender" data-src="https://images.vocus.cc/7c459a3b-5533-4faa-9462-e836d66d424c.jpg" data-width="1280" data-height="720" data-position="center" src="https://images.vocus.cc/7c459a3b-5533-4faa-9462-e836d66d424c.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Open Ran是指開放式無線電接取網路 可以把目前專屬於硬體服務網路的某部分虛擬化 電信營運商就能夠混合使用來自不同供應商的網路元件</figcaption></div></figure>
-<div class="draft-block draft--p left"></div>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/7c459a3b-5533-4faa-9462-e836d66d424c.jpg" data-width="1280" data-height="720" data-position="center" src="https://images.vocus.cc/7c459a3b-5533-4faa-9462-e836d66d424c.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">Open Ran是指開放式無線電接取網路 可以把目前專屬於硬體服務網路的某部分虛擬化 電信營運商就能夠混合使用來自不同供應商的網路元件</figcaption></div></figure>
 <div class="draft-block draft--p left">我們將會支持印太國家發展服膺於人權、法治、表達自由和其他國際社會中普世價值的科技。為了幫助開發中國家達成千禧年發展目標，我們會把支援擴展到他們發展人力資源的努力上並以科技合作為深化本區域夥伴關係的觸發點。我們還會透過科技來更進一步催化區域合作。我們會幫助縮小國家之間的數位落差並以我國科學、資訊科技還有數位轉型經驗的優勢為槓桿去援助發展中國家的數位轉型。我們會讓發展中國家社會經濟的弱勢團體能有更多數位機會並讓在數位科技上處於孤立的區域能有得以接觸到資訊科技的場所以增加其數位連結。</div>
 <div class="draft-block draft--p left">7. 在氣候變遷與能源安全上領頭進行區域合作</div>
 <div class="draft-block draft--p left">.............................................................................................</div>
@@ -35,4 +33,3 @@ author: 趙君朔
 <div class="draft-block draft--p left">接下來的段落是用各種實例來說明國際社會安全環境變得越來越複雜和嚴峻，那這部分和本文要比較的重點無關，會在之後專論日本的國防外交政策變化時再談。但緊接者第一部分全球安全環境的第二部分談印太安全環境與挑戰就是本報告的亮點所在了。和前面是不點名用暗指的方式談某些國家對全球安全環境的挑戰(其實就是在指中俄）相比，本部分第一段綜述再強調一次本區域有國家和區域擁有包括核武在內的可觀軍力、不認同普世價值還有基於這些價值的政經體系後，就指出日本在東海、南海遭到單方面想改變現狀的挑戰(雖然還列出了其他如海盜、恐怖主義、大規模毀滅性武器擴散等其他挑戰）。</div>
 <div class="draft-block draft--p left">然後本部分第二段馬上把中共對印太安全形成威脅的活動一個個具體點出來：首先是..........................................................................................................</div>
 <div class="draft-block draft--p left">是故在藍營支持者中享有高點閱率的郭正亮根本是為了強化其台灣政府犧牲國家主權、過度親美論點在節目中不惜用短短幾句話扭曲韓國報告內容(他有把握他的觀眾不會自己去仔細閱讀這份報告)，讓偏藍的群眾對於政府的外交政策產生更糟糕的印象，這種操作手法究竟是指是出於迎合特定政治立場群眾、賺取流量的商業考量，還是背後是來自對岸掌控資訊戰的一環，絕對是2024總統大選前需要關注的主戰場，<a href="https://www.youtube.com/watch?v=ZLft32-id9E&amp;t=112s" target="_blank" class="draft--a">而本文作者本周一在美中台戰情室中專訪網紅四叉貓也是把此議題當作第一個訪談的重點，歡迎有興趣的人去點閱該集。</a></div>
-<div class="draft-block draft--p left"></div>
