--- a/_posts/2023-01-15-VOCUS-半兵衛脇差-岸拜會的解讀-天下圍中升級版的美日同盟.html
+++ b/_posts/2023-01-15-VOCUS-半兵衛脇差-岸拜會的解讀-天下圍中升級版的美日同盟.html
@@ -8,11 +8,10 @@ tags: blog
 author: 謝文生
 ---
 
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">日前再度接受美國之音記者「向凌」的採訪，針對日本首相岸田文雄於1月13日在美國白宮跟拜登總統進行高峰會談的義意進行解析，同時南台灣美國商會研究員盛仰正及華盛頓哈德遜研究所(Hudson Institute)研究員長尾賢(Satoru Nagao)也各自接受採訪，感謝記者安排，將我的分析放在新聞的開頭與結尾，該新聞自台灣時間15日清晨發佈以來24小時左右，在推特上的點閱已達9.1萬人次；我將該連結放在文末。</div>
 <div class="draft-block draft--p left">我的分析內容如下：這次岸田首相跟拜登的會談，有對外及對內的雙重象徵目的。</div>
 <div class="draft-block draft--p left">在對外部份，岸田首相此行主要是就日本去年底通過的『安保3文書』的修訂，其中跟美國有關的『合作部份』進行確認，以及接下來合作的內容「如何展開」也進行確認，所以才會在峰會前先舉行外交、國防的「2＋2會議」。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/908964ed-74f2-41cd-9f54-b04a22fa2bc5.jpg" data-width="2048" data-height="1457" data-position="center" src="https://images.vocus.cc/908964ed-74f2-41cd-9f54-b04a22fa2bc5.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄與拜登於美國白宮會談（照片來源：日本首相官邸臉書2023年1月14日）</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/908964ed-74f2-41cd-9f54-b04a22fa2bc5.jpg" data-width="2048" data-height="1457" data-position="center" src="https://images.vocus.cc/908964ed-74f2-41cd-9f54-b04a22fa2bc5.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄與拜登於美國白宮會談（照片來源：日本首相官邸臉書2023年1月14日）</figcaption></div></figure>
 <div class="draft-block draft--p left">就結論來說，這次的岸拜會是要向國際、特別是向中國傳達4大訊息：</div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; font-weight: bold; ">一、 過往美日同盟裡「美攻日守」的『矛與盾』之角色與分工，正式成為「過去式」！</span></div>
 <div class="draft-block draft--p left">所釋放的訊息是，兩國作戰方式的改變，正是為了因應中國企圖以武力改變國際現狀與秩序的『強烈回應』。</div>
@@ -24,7 +23,7 @@ author: 謝文生
 <div class="draft-block draft--p left">而『雙方軍事指揮架構的調整』，直言講就是在作「戰時體制」作凖備。特別是日本在自衛隊中設立「統合司令官」專心指揮日軍作戰及跟在日美軍進行協同作戰。而「提高西南集團軍的司令的位階以跟美軍相符」，還有美方近日釋出美軍印太司令部打算在日本設立「在日美軍司令部」，有事狀態時可以直接就地指揮所有在日美軍，都是在展現美日『雙劍合璧』的軍力強度，已經超出中國的設定，其警告已經不止是口頭，而是是箭在弦上的行動展現。</div>
 <div class="draft-block draft--p left"><span style="text-decoration: underline; font-weight: bold; ">四、  如果再加上「經濟安保」的半導體封鎖及供應鍊重組、IPEV的威力等，就是在宣告『美日兩國已將硬的軍事、與軟的經濟，兩根棒子準備好』，明白警告中國「輕舉妄動，必敗」。</span></div>
 <div class="draft-block draft--p left">這也就是為什麼美國各界對日本安保三文書的修訂，不論共和、民主兩黨，或是國安相關智庫的反應大多呈現「正面肯定」，也就是說，這個方向的進展是符合兩國的利益設定與期待。</div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:2048px" class="image-block-prerender" data-src="https://images.vocus.cc/80c3fab9-57ba-43f9-8360-55f4a1bb2673.jpg" data-width="2048" data-height="1412" data-position="center" src="https://images.vocus.cc/80c3fab9-57ba-43f9-8360-55f4a1bb2673.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄與拜登於美國白宮（照片來源：日本首相官邸臉書2023年1月14日）</figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/80c3fab9-57ba-43f9-8360-55f4a1bb2673.jpg" data-width="2048" data-height="1412" data-position="center" src="https://images.vocus.cc/80c3fab9-57ba-43f9-8360-55f4a1bb2673.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block">圖：岸田文雄與拜登於美國白宮（照片來源：日本首相官邸臉書2023年1月14日）</figcaption></div></figure>
 <div class="draft-block draft--p left">至於對日本國內的部份，主要是日本部份主流媒體一直『拘泥』在岸田首相上任迄今將近1年多，卻『尚未在美國政治中心的華府跟美國總統進行會談』這樣的歷史性儀式，而酸個不停。</div>
 <div class="draft-block draft--p left">彷彿岸田首相沒跟拜登在白宮見面，他的政權就屬『尚未在聖地接受洗禮』而讓『政權的合理性有所不足』。</div>
 <div class="draft-block draft--p left">事實上，岸田首相上任至今1年3個月跟拜登之間，不包括視訊及電話，『面對面』的次數至少就有6次。</div>
@@ -34,17 +33,7 @@ author: 謝文生
 <div class="draft-block draft--p left">接下來的最大考驗則是2024年後兩人是否仍然是『當時在位的元首』了。</div>
 <div class="draft-block draft--p left">以下是接受美國之音採訪的連結：</div>
 <div><h3><a href="https://www.voacantonese.com/a/kishida-and-biden-to-set-course-for-alliance-in-first-talks-in-washington-20230114/6919108.html">專家：美日首腦峰會宣示&quot;雙劍合璧&quot; 嚇阻中國&quot;不要輕舉妄動&quot;</a></h3><span>美日兩國1月13日在華盛頓舉行首腦峰會，並在會後發表聯合聲明。專家認為，美日合作對抗中國的方式有顯著的調整，日本將承擔更多的責任，美日首腦峰會也是對日本防衛政策重大改變的背書。 強化合作嚇阻中國勿輕舉妄動 ...</span><img src="https://d2a6d2ofes041u.cloudfront.net/resize?norotation=true&amp;url=https%3A%2F%2Fgdb.voanews.com%2F09410000-0a00-0242-6579-08daf5a8c53d_w1200_r1.jpg&amp;width=550&amp;sign=HpcAHyhatXrJLgbWRNLZd1qkd_8IlI50CDuTKXmaP1w"></div>
-<div class="draft-block draft--p left"></div>
 <div class="draft-block draft--p left">推特的連結：</div>
-<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1614711993742786560?s=20&amp;t=_xYSmL7ENiVuMjS0rCZFHw"></div>
-<div class="draft-block draft--p left"></div>
+<div><iframe allowfullscreen src="https://twitter.com/VOAChinese/status/1614711993742786560?s=20&amp;t=_xYSmL7ENiVuMjS0rCZFHw"></iframe></div>
 <div class="draft-block draft--p left">（本文結束）</div>
 <div class="draft-block draft--p left">（如您覺得這篇文章值得給予作者鼓勵， 請按下方心形的讚，感謝！）</div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
-<div class="draft-block draft--p left"></div>
