--- a/_posts/2023-01-27-VOCUS-kettle-與-釜-鍋-鍋子-鍋爐-鼎-鼎爐-器壺-水壺-酒壺-銅壺-坑洞-坑穴-炕-等的橋接-兼談曹植-七步詩-之謎.html
+++ b/_posts/2023-01-27-VOCUS-kettle-與-釜-鍋-鍋子-鍋爐-鼎-鼎爐-器壺-水壺-酒壺-銅壺-坑洞-坑穴-炕-等的橋接-兼談曹植-七步詩-之謎.html
@@ -8,8 +8,7 @@ tags: blog
 author: 羅聖爾
 ---
 
-<div class="draft-block draft--p left"></div>
-<figure class="draft--imgNormal draft-block"><div><img style="height:1440px" class="image-block-prerender" data-src="https://images.vocus.cc/32f6241b-319b-46cc-9f69-9d6e4898def1.jpg" data-width="1440" data-height="760" data-position="center" src="https://images.vocus.cc/32f6241b-319b-46cc-9f69-9d6e4898def1.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
+<figure class="draft--imgNormal draft-block"><div><img data-src="https://images.vocus.cc/32f6241b-319b-46cc-9f69-9d6e4898def1.jpg" data-width="1440" data-height="760" data-position="center" src="https://images.vocus.cc/32f6241b-319b-46cc-9f69-9d6e4898def1.jpg" referrerpolicy="no-referrer"><figcaption class="imageCaption draft-block" style="cursor:text;display:block"></figcaption></div></figure>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;丨ㄑ一twoT兩&nbsp;=&nbsp;一v丨二TT =&nbsp;一丷干父&nbsp;=&nbsp;釜</span>，其中&nbsp;k&nbsp;先分解爲 ｜ㄑ再作後續轉換，TT&nbsp;經過旋轉再組合象徵漢文「父」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;咼與點點人E =&nbsp;咼與丷人丨三&nbsp;=&nbsp;咼與丷𠆢王&nbsp;=&nbsp;咼與金&nbsp;=&nbsp;鍋</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;咼Ethreetle =&nbsp;咼丨三三tle =&nbsp;咼王tletletle =&nbsp;咼王點二兜人ten連圓&nbsp;=&nbsp;咼王丷兜𠆢十連〇&nbsp;=&nbsp;咼金十連口&nbsp;=&nbsp;鍋子</span>，其中「十連口」約略描述漢字「子」的甲骨文字體之一，即形似符號「十口」下上組合的字體。</div>
@@ -23,7 +22,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;亢與土同連E =&nbsp;坑同連ε =&nbsp;坑同連3 =&nbsp;坑同連三&nbsp;=&nbsp;坑同連氵=&nbsp;坑洞</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;亢earth兜對LE =&nbsp;亢土兜LLㄈㄧ&nbsp;=&nbsp;坑兜ᒧᒪㄇ丶=&nbsp;坑兜八冖丶=&nbsp;坑兜八宀&nbsp;=&nbsp;坑穴</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettle =&nbsp;亢與點點人&nbsp;=&nbsp;亢與丷人&nbsp;=&nbsp;亢與火&nbsp;=&nbsp;炕</span>。漢字「炕」指稱之物也有類似「爐」的加熱功能，通常是指一種用磚土砌作的坑穴狀構造。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-7krqu"><span style="font-weight: bold; ">P.S.<br></span></h2>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">pot：鍋；釜；鬴；鍪；鼎；壺；盆；盆子；鑵子；瓶子；杯大；炰鼎</span>，意通「煲鼎」<span style="font-weight: bold; ">；煲鼎</span>，此時漢文或譯單一的漢字「煲」<span style="font-weight: bold; ">；烹器；盆栽；盆植；盆種；牢套。</span></div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">cauldron：鍋</span>，此時<span style="font-weight: bold; ">&nbsp;cauldron =&nbsp;咼A與二直連dot聯&nbsp;=&nbsp;咼亼與二丨連點聯&nbsp;=&nbsp;咼亼與土連丷&nbsp;=&nbsp;咼全丷=&nbsp;咼金&nbsp;=&nbsp;鍋</span>，意通「鍋子」<span style="font-weight: bold; ">；鍋子；鍋器；鍋鼎爐；釜</span>，此時<span style="font-weight: bold; ">&nbsp;cauldron =&nbsp;交1Li二點兩王&nbsp;=&nbsp;交丨連點二丷王&nbsp;=&nbsp;交丨連㇀二丷王&nbsp;=&nbsp;交亻二丷王&nbsp;=&nbsp;交T二丷王&nbsp;=&nbsp;交TT丷王&nbsp;=&nbsp;父丷王&nbsp;=&nbsp;釜</span>，漢字「釜」意通「鍋」、「鼎」、「鍋爐」、「鼎爐」之類，也是煮食用的金屬器具。但目前常見的漢字「火鍋」，一般是對應於&nbsp;hotpot (火鍋，此時其中的&nbsp;hot =&nbsp;人偶點&nbsp;=&nbsp;人丷&nbsp;=&nbsp;火；火釜；火鼎；熱鍋；炎鍋；焱鍋；焱釜；……)&nbsp;一字。</div>
@@ -32,7 +30,6 @@ author: 羅聖爾
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">boiler：boil機；boil具；boil機具；boil之爐；鍋爐</span>，此時<span style="font-weight: bold; ">&nbsp;boiler = bone冫爐E人&nbsp;=&nbsp;咼丷爐｜三𠆢&nbsp;=&nbsp;咼丷爐全&nbsp;=&nbsp;鍋爐</span>。其中&nbsp;boil-&nbsp;可能有以下的諸多含意：<span style="font-weight: bold; ">烹；煮；煑；沸熱；騰；沸熱騰；沸騰；騰煮；燙；涮；烹煮；烹煑；焙；烘；焙烘；炰；煲；炮；串燒；燒熱；燒肉；炙&nbsp;(烤肉)；燒炙&nbsp;(炙燒)；炙熱&nbsp;(熱炙)；炮烙；烤；炙烤；燒烤；焅&nbsp;(cook、焅烤、焅于旱气、焅用熱氣)；焢窯熱；烝&nbsp;(蒸)；熱；熟；熱熟；炊；煠；慢火熱；燉；熬；火油熱；炸；㸄；爆；炒；煎；波微熱</span>，意通「微波加熱」。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">oven：火炉；炉；火爐；爐；灶；爐灶；炕；窯；炕窯；火焚窯</span>。例如：microwave oven (微波爐)。</div>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">kettledrum：釜樣鼓</span>，其中第二個&nbsp;e&nbsp;同時約略形聲漢語「樣」<span style="font-weight: bold; ">；鍋樣鼓；銅鼓；半圓銅鼓；音定鼓</span>，意通「定音鼓」<span style="font-weight: bold; ">；定音鼓；敲打定音鼓</span>。此種敲擊樂器的樂手或鼓手通常稱爲&nbsp;kettledrummer (kettledrum手；kettle樂手；kettledrum員；kettledrum員人；kettledrum樂人；kettledrum者；kettledrum樂者；kettledrum音樂人)。</div>
-<div class="draft-block draft--p left"></div>
 <h2 class="draft-block draft--h2" name="header-6pafg"><span style="font-weight: bold; ">後記：古代魏國</span><span style="text-decoration: underline; font-weight: bold; ">曹植</span><span style="font-weight: bold; ">的「七步詩」之謎<br></span></h2>
 <h3 class="draft-block draft--h3" name="header-9u90i"><span style="font-weight: bold; ">一、曹植「七步詩」之精簡版「煮豆燃豆萁，豆在釜中泣；本是同根生，相煎何太急？」的試譯：<br></span></h3>
 <div class="draft-block draft--p left"><span style="font-weight: bold; ">Cook soybeans by burning the soybeans’ stalks,&nbsp;</span>--&nbsp;煮豆燃豆萁，<span style="font-weight: bold; ">(P.S.&nbsp;萁&nbsp;=&nbsp;大豆(菽豆)眾之莖幹眾&nbsp;= soybeans’ stalks)</span></div>
@@ -48,4 +45,3 @@ author: 羅聖爾
 <div class="draft-block draft--p left">換句話說，曹植這首七步詩可能在暗指著：當時有意圖不軌的強敵在分化他們兄弟倆，想要使魏國宮廷鬧出醜聞內亂、削弱天下大眾對於曹魏政權的良好觀感，畢竟曹丕當時也是以儒家的「仁政思想」(republicanism)&nbsp;為其主要的政治理念。也因此，曹丕受到曹植這一警告嚇阻，纔開始緊張起來、並且趕快放過了曹植。</div>
 <div class="draft-block draft--p left">所以，從「七步詩」這個故事來看，曹植不見得是一位不食人間煙火的文弱書生之輩；反而早期的曹丕纔可能是思慮不周，而且容易大意失荆州的人。幸好，後來曹植的七步詩提醒了曹丕，而曹丕也讀懂了曹植的七步詩。</div>
 <div class="draft-block draft--p left">史實上來說，當初在魏國爭奪繼任曹操為魏王世子的政權黨爭中，曹植和曹丕就是分屬兩個最大黨派陣營的頭號人物，而且曹植陣營中也不乏足智多謀、消息靈通之士，只是因為曹植為人有點任性、有時又會發酒瘋，用現在的話來說就是有點人格不太穩定，所以最終曹操還是比較信任曹丕。</div>
-<div class="draft-block draft--p left"></div>
